# llm_from_scratch

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.gradient/workflows/: workflow.yaml
src/llm_from_scratch/: analysis.py  inference.py  main.py  models.py  sample_prep.py  tokenizer.py  train.py  training.py
src/llm_from_scratch/models/: attention.py  bigram.py  multihead_attention.py  prev_mean.py
