[project]
name = "llm_from_scratch"
version = "0.1.0"
description = "Learning project. LLM built following Karpathy's YouTube lecture and notes taken from gpt-fast."
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "torch>=2.1.1",
    "setuptools>=69.0.2",
    "matplotlib>=3.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
